@@ -1,6 +1,6 @@
 Date: 2022-09-19
 Package: CHNOSZ
-Version: 1.9.9-34
+Version: 1.9.9-35
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
