@@ -1,55 +1,55 @@
-name,abbrv,formula,state,ref1,ref2,date,model,G,H,S,Cp,V,a1.a,a2.b,a3.c,a4.d,c1.e,c2.f,omega.lambda,z.T
-alanate,NA,C3H6NO2-,aq,SK95,CHNOSZ,2006-09-03,HKF,-74660,-120910,30.25,17.8,61.88,10.6281,17.3648,0.6505,-3.4968,12.685,-4.1859,1.17,-1
-glycinate,NA,C2H4NO2-,aq,SK95,CHNOSZ,2006-09-03,HKF,-75280,-112300,28.48,-6.6,43.77,8.1592,11.7696,1.921,-3.2655,12.9389,-4.1859,1.1975,-1
-Ca(Gly)+,NA,Ca(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-209240,-238629,32.785,59.3,32.6,6.2431,7.4595,2.8241,-3.0873,41.4246,9.0464,0.0543,1
-Ca(Gly)2,NA,Ca(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-285555,-347942,74.749,131,89,13.9371,26.2517,-4.5733,-3.8641,82.6597,23.6485,-0.03,0
-Mg(Gly)+,NA,Mg(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-188490,-225174,6.198,64.2,28.7,5.8466,6.4953,3.1944,-3.0474,48.0086,10.0502,0.4555,1
-Mg(Gly)2,NA,Mg(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-267874,-340003,39.956,140.6,84.7,13.3443,24.8034,-4.0028,-3.8043,88.2942,25.6069,-0.03,0
-Sr(Gly)+,NA,Sr(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-211334,-239307,40.925,53.6,33.3,6.3007,7.6019,2.7652,-3.0932,36.9719,7.8914,-0.0684,1
-Sr(Gly)2,NA,Sr(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-287199,-347420,85.401,119.9,89.8,14.0476,26.5176,-4.6704,-3.8751,76.1763,21.395,-0.03,0
-Ba(Gly)+,NA,Ba(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-211341,-235808,54.327,48.6,38.7,6.9656,9.2295,2.1164,-3.1604,32.1389,6.8602,-0.2709,1
-Ba(Gly)2,NA,Ba(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-287819,-343302,102.94,110.1,95.8,14.8647,28.514,-5.4575,-3.9577,70.3874,19.383,-0.03,0
-Mn(Gly)+,NA,Mn(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-134771,-165803,25,67,33.7,6.4299,7.9186,2.6372,-3.1063,47.0493,10.6185,0.1739,1
-Mn(Gly)2,NA,Mn(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-214101,-278847,64.561,146.1,90.2,14.1002,26.6481,-4.7253,-3.8805,91.4846,26.7157,-0.03,0
-Fe(Gly)+,NA,Fe(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-103038,-135251,20,58,28,5.6774,6.0837,3.3533,-3.0304,42.4593,8.7852,0.2482,1
-Fe(Gly)2,NA,Fe(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-182709,-248527,58.018,128.5,83.9,13.2339,24.5311,-3.8903,-3.793,81.1932,23.1388,-0.03,0
-Ni(Gly)+,NA,Ni(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-94541,-129289,12,49.9,20.4,4.6813,3.6515,4.3097,-2.9299,38.8214,7.1352,0.3686,1
-Ni(Gly)2,NA,Ni(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-176531,-246055,48,112.7,75.4,12.0787,21.7107,-2.7819,-3.6764,71.9311,19.9195,-0.03,0
-Cu(Gly)+,NA,Cu(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-71295,-102408,25,63.4,25.3,5.2864,5.1238,3.7413,-2.9907,44.9395,9.8852,0.1739,1
-Cu(Gly)2,NA,Cu(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-156477,-221770,63,139,80.9,12.8262,23.5338,-3.4944,-3.7518,87.3679,25.285,-0.03,0
-Zn(Gly)+,NA,Zn(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-117818,-151609,18,62.1,25.6,5.3677,5.3226,3.6628,-2.9989,45.1185,9.6102,0.2792,1
-Zn(Gly)2,NA,Zn(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-199139,-267408,55,136.4,81.3,12.8771,23.6625,-3.5537,-3.7571,85.8243,24.7484,-0.03,0
-Pb(Gly)+,NA,Pb(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-88450,-112312,56.918,47.7,35.3,6.4949,8.079,2.5712,-3.1129,31.2483,6.6769,-0.3103,1
-Pb(Gly)2,NA,Pb(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-168353,-222992,106.33,108.3,92.1,14.355,27.2722,-4.9746,-3.9063,69.3582,19.0253,-0.03,0
-Co(Gly)+,NA,Co(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-95195,-129082,15,58.7,25.5,5.3683,5.3273,3.6539,-2.9991,43.5722,8.9227,0.326,1
-Co(Gly)2,NA,Co(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-175957,-243427,55,129.8,81.2,12.8601,23.6197,-3.5341,-3.7553,81.9652,23.407,-0.03,0
-Cd(Gly)+,NA,Cd(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-100236,-132088,27,68.4,35.3,6.6477,8.4525,2.4231,-3.1283,47.5446,10.8935,0.1417,1
-Cd(Gly)2,NA,Cd(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-180576,-246607,65,148.7,92.1,14.355,27.2722,-4.9746,-3.9063,93.0282,27.2523,-0.03,0
-Eu(Gly)+,NA,Eu(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-206629,-234136,47.919,89.8,50.3,8.5841,13.176,0.5767,-3.3236,57.1645,15.2476,-0.1738,1
-Eu(Gly)2,NA,Eu(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-283817,-342929,94.554,190.4,108.7,16.6314,32.8272,-7.1514,-4.136,117.4699,35.7476,-0.03,0
-Ca(Ala)+,NA,Ca(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-208472,-247083,34.555,104.6,50.7,8.7124,13.4888,0.454,-3.3365,67.7227,18.2713,0.0279,1
-Ca(Ala)2,NA,Ca(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-284046,-364714,78.835,239.1,127.3,19.1765,39.0448,-9.6021,-4.393,146.0369,45.6768,-0.03,0
-Mg(Ala)+,NA,Mg(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-185839,-231745,7.968,109.5,46.8,8.3169,12.5282,0.821,-3.2968,74.3351,19.275,0.4322,1
-Mg(Ala)2,NA,Mg(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-262231,-352641,44.042,248.8,123,18.5836,37.5967,-9.0318,-4.3331,151.6713,47.6352,-0.03,0
-Sr(Ala)+,NA,Sr(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-210430,-247624,42.695,98.9,51.4,8.77,13.6312,0.3947,-3.3424,63.2691,17.1163,-0.0948,1
-Sr(Ala)2,NA,Sr(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-285431,-363933,89.487,228.1,128.1,19.2869,39.3109,-9.699,-4.404,139.5534,43.4233,-0.03,0
-Ba(Ala)+,NA,Ba(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-210013,-243703,56.097,93.7,56.8,9.4348,15.2528,-0.2391,-3.4095,58.4325,16.085,-0.2977,1
-Ba(Ala)2,NA,Ba(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-285287,-359051,107.026,218.2,134.1,20.104,41.3073,-10.4865,-4.4865,133.7647,41.4112,-0.03,0
-Mn(Ala)+,NA,Mn(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-133580,-173180,28.965,112.3,51.8,8.8873,13.9167,0.2842,-3.3542,73.0237,19.8433,0.1124,1
-Mn(Ala)2,NA,Mn(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-212074,-294245,71.52,254.2,128.5,19.3395,39.4414,-9.7539,-4.4094,154.8617,48.744,-0.03,0
-Fe(Ala)+,NA,Fe(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-103252,-145766,18.058,103.3,46.1,8.1661,12.1558,0.976,-3.2814,69.2856,18.01,0.2792,1
-Fe(Ala)2,NA,Fe(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-182987,-268535,57.246,236.6,122.2,18.4732,37.3244,-8.9189,-4.3219,144.5703,45.1671,-0.03,0
-Ni(Ala)+,NA,Ni(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-93527,-137131,15,95.2,38.5,7.1451,9.664,1.9536,-3.1784,64.9703,16.36,0.326,1
-Ni(Ala)2,NA,Ni(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-174545,-262972,50,220.8,113.8,17.318,34.504,-7.8105,-4.2053,135.3083,41.9478,-0.03,0
-Cu(Ala)+,NA,Cu(C3H6NO2)+,aq,SK95,CHNOSZ,2007-10-12,HKF,-70595,-109970,25,108.7,43.4,7.7387,11.1165,1.3762,-3.2385,70.7759,19.11,0.0974,1
-Cu(Ala)2,NA,Cu(C3H6NO2)2,aq,SK95,CHNOSZ,2007-10-12,HKF,-154654,-237360,65,247.2,119.2,18.0655,36.3271,-8.523,-4.2807,150.7452,47.3132,-0.03,0
-Zn(Ala)+,NA,Zn(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-116613,-160464,17,107.4,43.8,7.8514,11.3891,1.2746,-3.2497,71.8106,18.835,0.2956,1
-Zn(Ala)2,NA,Zn(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-197112,-283389,60,244.5,119.6,18.1164,36.4558,-8.5823,-4.286,149.2015,46.7767,-0.03,0
-Pb(Ala)+,NA,Pb(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-87191,-120275,58.688,93,53.4,8.964,14.1088,0.1992,-3.3622,57.5413,15.9017,-0.3372,1
-Pb(Ala)2,NA,Pb(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-166271,-239191,110.416,216.4,130.4,19.5944,40.0653,-10.0034,-4.4352,132.7356,41.0535,-0.03,0
-Co(Ala)+,NA,Co(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-94099,-136245,20,104,43.6,7.8202,11.3148,1.299,-3.2467,69.3955,18.1475,0.2482,1
-Co(Ala)2,NA,Co(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-173793,-259272,60,238,119.4,18.0995,36.4127,-8.5626,-4.2842,145.3423,45.4353,-0.03,0
-Cd(Ala)+,NA,Cd(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-100082,-141016,29.238,113.7,53.4,9.1151,14.4742,0.063,-3.3773,73.7914,20.1183,0.1098,1
-Cd(Ala)2,NA,Cd(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-179940,-263420,71.877,256.8,130.4,19.5944,40.0653,-10.0034,-4.4352,156.4053,49.2806,-0.03,0
-Eu(Ala)+,NA,Eu(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,-205329,-242057,49.689,135,68.4,11.0532,19.2058,-1.7947,-3.5729,83.4588,24.4724,-0.2006,1
-Eu(Ala)2,NA,Eu(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,-281121,-358514,98.64,298.5,147,21.8707,45.6205,-12.1799,-4.6649,180.847,57.7759,-0.03,0
+name,abbrv,formula,state,ref1,ref2,date,model,E_units,G,H,S,Cp,V,a1.a,a2.b,a3.c,a4.d,c1.e,c2.f,omega.lambda,z.T
+alanate,NA,C3H6NO2-,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-74660,-120910,30.25,17.8,61.88,10.6281,17.3648,0.6505,-3.4968,12.685,-4.1859,1.17,-1
+glycinate,NA,C2H4NO2-,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-75280,-112300,28.48,-6.6,43.77,8.1592,11.7696,1.921,-3.2655,12.9389,-4.1859,1.1975,-1
+Ca(Gly)+,NA,Ca(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-209240,-238629,32.785,59.3,32.6,6.2431,7.4595,2.8241,-3.0873,41.4246,9.0464,0.0543,1
+Ca(Gly)2,NA,Ca(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-285555,-347942,74.749,131,89,13.9371,26.2517,-4.5733,-3.8641,82.6597,23.6485,-0.03,0
+Mg(Gly)+,NA,Mg(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-188490,-225174,6.198,64.2,28.7,5.8466,6.4953,3.1944,-3.0474,48.0086,10.0502,0.4555,1
+Mg(Gly)2,NA,Mg(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-267874,-340003,39.956,140.6,84.7,13.3443,24.8034,-4.0028,-3.8043,88.2942,25.6069,-0.03,0
+Sr(Gly)+,NA,Sr(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-211334,-239307,40.925,53.6,33.3,6.3007,7.6019,2.7652,-3.0932,36.9719,7.8914,-0.0684,1
+Sr(Gly)2,NA,Sr(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-287199,-347420,85.401,119.9,89.8,14.0476,26.5176,-4.6704,-3.8751,76.1763,21.395,-0.03,0
+Ba(Gly)+,NA,Ba(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-211341,-235808,54.327,48.6,38.7,6.9656,9.2295,2.1164,-3.1604,32.1389,6.8602,-0.2709,1
+Ba(Gly)2,NA,Ba(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-287819,-343302,102.94,110.1,95.8,14.8647,28.514,-5.4575,-3.9577,70.3874,19.383,-0.03,0
+Mn(Gly)+,NA,Mn(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-134771,-165803,25,67,33.7,6.4299,7.9186,2.6372,-3.1063,47.0493,10.6185,0.1739,1
+Mn(Gly)2,NA,Mn(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-214101,-278847,64.561,146.1,90.2,14.1002,26.6481,-4.7253,-3.8805,91.4846,26.7157,-0.03,0
+Fe(Gly)+,NA,Fe(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-103038,-135251,20,58,28,5.6774,6.0837,3.3533,-3.0304,42.4593,8.7852,0.2482,1
+Fe(Gly)2,NA,Fe(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-182709,-248527,58.018,128.5,83.9,13.2339,24.5311,-3.8903,-3.793,81.1932,23.1388,-0.03,0
+Ni(Gly)+,NA,Ni(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-94541,-129289,12,49.9,20.4,4.6813,3.6515,4.3097,-2.9299,38.8214,7.1352,0.3686,1
+Ni(Gly)2,NA,Ni(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-176531,-246055,48,112.7,75.4,12.0787,21.7107,-2.7819,-3.6764,71.9311,19.9195,-0.03,0
+Cu(Gly)+,NA,Cu(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-71295,-102408,25,63.4,25.3,5.2864,5.1238,3.7413,-2.9907,44.9395,9.8852,0.1739,1
+Cu(Gly)2,NA,Cu(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-156477,-221770,63,139,80.9,12.8262,23.5338,-3.4944,-3.7518,87.3679,25.285,-0.03,0
+Zn(Gly)+,NA,Zn(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-117818,-151609,18,62.1,25.6,5.3677,5.3226,3.6628,-2.9989,45.1185,9.6102,0.2792,1
+Zn(Gly)2,NA,Zn(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-199139,-267408,55,136.4,81.3,12.8771,23.6625,-3.5537,-3.7571,85.8243,24.7484,-0.03,0
+Pb(Gly)+,NA,Pb(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-88450,-112312,56.918,47.7,35.3,6.4949,8.079,2.5712,-3.1129,31.2483,6.6769,-0.3103,1
+Pb(Gly)2,NA,Pb(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-168353,-222992,106.33,108.3,92.1,14.355,27.2722,-4.9746,-3.9063,69.3582,19.0253,-0.03,0
+Co(Gly)+,NA,Co(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-95195,-129082,15,58.7,25.5,5.3683,5.3273,3.6539,-2.9991,43.5722,8.9227,0.326,1
+Co(Gly)2,NA,Co(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-175957,-243427,55,129.8,81.2,12.8601,23.6197,-3.5341,-3.7553,81.9652,23.407,-0.03,0
+Cd(Gly)+,NA,Cd(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-100236,-132088,27,68.4,35.3,6.6477,8.4525,2.4231,-3.1283,47.5446,10.8935,0.1417,1
+Cd(Gly)2,NA,Cd(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-180576,-246607,65,148.7,92.1,14.355,27.2722,-4.9746,-3.9063,93.0282,27.2523,-0.03,0
+Eu(Gly)+,NA,Eu(C2H4NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-206629,-234136,47.919,89.8,50.3,8.5841,13.176,0.5767,-3.3236,57.1645,15.2476,-0.1738,1
+Eu(Gly)2,NA,Eu(C2H4NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-283817,-342929,94.554,190.4,108.7,16.6314,32.8272,-7.1514,-4.136,117.4699,35.7476,-0.03,0
+Ca(Ala)+,NA,Ca(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-208472,-247083,34.555,104.6,50.7,8.7124,13.4888,0.454,-3.3365,67.7227,18.2713,0.0279,1
+Ca(Ala)2,NA,Ca(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-284046,-364714,78.835,239.1,127.3,19.1765,39.0448,-9.6021,-4.393,146.0369,45.6768,-0.03,0
+Mg(Ala)+,NA,Mg(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-185839,-231745,7.968,109.5,46.8,8.3169,12.5282,0.821,-3.2968,74.3351,19.275,0.4322,1
+Mg(Ala)2,NA,Mg(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-262231,-352641,44.042,248.8,123,18.5836,37.5967,-9.0318,-4.3331,151.6713,47.6352,-0.03,0
+Sr(Ala)+,NA,Sr(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-210430,-247624,42.695,98.9,51.4,8.77,13.6312,0.3947,-3.3424,63.2691,17.1163,-0.0948,1
+Sr(Ala)2,NA,Sr(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-285431,-363933,89.487,228.1,128.1,19.2869,39.3109,-9.699,-4.404,139.5534,43.4233,-0.03,0
+Ba(Ala)+,NA,Ba(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-210013,-243703,56.097,93.7,56.8,9.4348,15.2528,-0.2391,-3.4095,58.4325,16.085,-0.2977,1
+Ba(Ala)2,NA,Ba(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-285287,-359051,107.026,218.2,134.1,20.104,41.3073,-10.4865,-4.4865,133.7647,41.4112,-0.03,0
+Mn(Ala)+,NA,Mn(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-133580,-173180,28.965,112.3,51.8,8.8873,13.9167,0.2842,-3.3542,73.0237,19.8433,0.1124,1
+Mn(Ala)2,NA,Mn(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-212074,-294245,71.52,254.2,128.5,19.3395,39.4414,-9.7539,-4.4094,154.8617,48.744,-0.03,0
+Fe(Ala)+,NA,Fe(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-103252,-145766,18.058,103.3,46.1,8.1661,12.1558,0.976,-3.2814,69.2856,18.01,0.2792,1
+Fe(Ala)2,NA,Fe(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-182987,-268535,57.246,236.6,122.2,18.4732,37.3244,-8.9189,-4.3219,144.5703,45.1671,-0.03,0
+Ni(Ala)+,NA,Ni(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-93527,-137131,15,95.2,38.5,7.1451,9.664,1.9536,-3.1784,64.9703,16.36,0.326,1
+Ni(Ala)2,NA,Ni(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-174545,-262972,50,220.8,113.8,17.318,34.504,-7.8105,-4.2053,135.3083,41.9478,-0.03,0
+Cu(Ala)+,NA,Cu(C3H6NO2)+,aq,SK95,CHNOSZ,2007-10-12,HKF,cal,-70595,-109970,25,108.7,43.4,7.7387,11.1165,1.3762,-3.2385,70.7759,19.11,0.0974,1
+Cu(Ala)2,NA,Cu(C3H6NO2)2,aq,SK95,CHNOSZ,2007-10-12,HKF,cal,-154654,-237360,65,247.2,119.2,18.0655,36.3271,-8.523,-4.2807,150.7452,47.3132,-0.03,0
+Zn(Ala)+,NA,Zn(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-116613,-160464,17,107.4,43.8,7.8514,11.3891,1.2746,-3.2497,71.8106,18.835,0.2956,1
+Zn(Ala)2,NA,Zn(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-197112,-283389,60,244.5,119.6,18.1164,36.4558,-8.5823,-4.286,149.2015,46.7767,-0.03,0
+Pb(Ala)+,NA,Pb(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-87191,-120275,58.688,93,53.4,8.964,14.1088,0.1992,-3.3622,57.5413,15.9017,-0.3372,1
+Pb(Ala)2,NA,Pb(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-166271,-239191,110.416,216.4,130.4,19.5944,40.0653,-10.0034,-4.4352,132.7356,41.0535,-0.03,0
+Co(Ala)+,NA,Co(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-94099,-136245,20,104,43.6,7.8202,11.3148,1.299,-3.2467,69.3955,18.1475,0.2482,1
+Co(Ala)2,NA,Co(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-173793,-259272,60,238,119.4,18.0995,36.4127,-8.5626,-4.2842,145.3423,45.4353,-0.03,0
+Cd(Ala)+,NA,Cd(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-100082,-141016,29.238,113.7,53.4,9.1151,14.4742,0.063,-3.3773,73.7914,20.1183,0.1098,1
+Cd(Ala)2,NA,Cd(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-179940,-263420,71.877,256.8,130.4,19.5944,40.0653,-10.0034,-4.4352,156.4053,49.2806,-0.03,0
+Eu(Ala)+,NA,Eu(C3H6NO2)+,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-205329,-242057,49.689,135,68.4,11.0532,19.2058,-1.7947,-3.5729,83.4588,24.4724,-0.2006,1
+Eu(Ala)2,NA,Eu(C3H6NO2)2,aq,SK95,CHNOSZ,2006-09-03,HKF,cal,-281121,-358514,98.64,298.5,147,21.8707,45.6205,-12.1799,-4.6649,180.847,57.7759,-0.03,0
